--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,3 +84,6 @@
 .debita-gradient {
   background: linear-gradient(90deg, rgba(215, 80, 113, 0.67) -4.81%, rgba(112, 91, 220, 0.51) 95.43%);
 }
+.dashboard-item-gradient {
+  background: linear-gradient(90deg, rgba(215, 80, 113, 0.1) -4.81%, rgba(112, 91, 220, 0.1) 95.43%);
+}
