--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,6 +94,7 @@
   }
 }
 
+
 @layer base {
   * {
     @apply border-border;
@@ -101,6 +102,12 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .beta-warning-gradient {
